# finanssit

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  testausohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
src/: account.py  compound_interest_calc.py  config.py  database_connection.py  financeservice.py  index.py  initialize_database.py  login.py  profilerepository.py  register.py  transactionrepository.py  ui.py  userrepository.py
src/gui/: account.py  login.py  profile.py  register.py  ui.py
src/repositories/: profilerepository.py  transactionrepository.py  userrepository.py
src/tests/: cic_test.py  financeservice_test.py
