[tool.poetry]
name = "finanssit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
werkzeug = "^3.0.2"
python-dotenv = "^1.0.1"
matplotlib = "^3.8.4"
mplcursors = "^0.5.3"
tkcalendar = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"
pytest = "^8.1.1"
coverage = "^7.4.4"
pylint = "^3.1.0"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
